--- a/CinematicModel/CinematicModel/CinematicModel.csproj
+++ b/CinematicModel/CinematicModel/CinematicModel.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ModelStructure\Actor.cs" />
     <Compile Include="ModelStructure\CinematicModel.cs" />
     <Compile Include="ModelStructure\FireBoltActions\AnimateAction.cs" />
+    <Compile Include="ModelStructure\FireBoltActions\FunctionAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\RotateAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\TranslateAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\DestroyAction.cs" />
