--- a/CinematicModel/CinematicModel/CinematicModel.csproj
+++ b/CinematicModel/CinematicModel/CinematicModel.csproj
@@ -93,6 +93,7 @@
     <Compile Include="ModelStructure\CinematicModel.cs" />
     <Compile Include="ModelStructure\FireBoltActions\AnimateAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\AttachAction.cs" />
+    <Compile Include="ModelStructure\FireBoltActions\FaceAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\RotateAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\TranslateAction.cs" />
     <Compile Include="ModelStructure\FireBoltActions\DestroyAction.cs" />
